--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ django-ckeditor==6.7.1
 django-js-asset==2.2.0
 idna==3.7
 pillow==10.3.0
+psycopg==3.2.3
+python-dotenv==1.0.1
 requests==2.31.0
 sqlparse==0.5.0
+typing_extensions==4.12.2
 urllib3==2.2.1
